[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/background.png" type="Texture" id=1]
[ext_resource path="res://Images/enemy.png" type="Texture" id=2]
[ext_resource path="res://Movimiento.gd" type="Script" id=3]
[ext_resource path="res://funciones/Funcion07.tres" type="Resource" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Movimiento" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
funcion = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
margin_left = -1006.92
margin_top = -774.989
margin_right = 1041.08
margin_bottom = 761.011
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam" type="Camera2D" parent="."]
current = true

[node name="Trail" type="Line2D" parent="."]
width_curve = SubResource( 1 )
default_color = Color( 0.4, 0.501961, 1, 0.32549 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="ControlPanel" type="HBoxContainer" parent="."]
anchor_top = -0.493
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 390.0
margin_top = 43.8
margin_right = -22.5
margin_bottom = -37.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="VSlider" parent="ControlPanel"]
margin_left = 63.0
margin_right = 79.0
margin_bottom = 515.0
max_value = 4.0
step = 0.1
value = 1.0

[node name="Speed" type="VSlider" parent="ControlPanel"]
margin_left = 83.0
margin_right = 99.0
margin_bottom = 515.0
min_value = 0.1
max_value = 50.0
step = 0.1
value = 0.5

[connection signal="value_changed" from="ControlPanel/Scale" to="." method="_on_Scale_value_changed"]
[connection signal="value_changed" from="ControlPanel/Speed" to="." method="_on_Speed_value_changed"]
